Refactored minor issues in PasteApi project